db연결과 멀티 모듈 설정

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -30,9 +30,19 @@ dependencies {
 
     implementation project(':db')
 
+    // jpa
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 }
 
 test {
     useJUnitPlatform()
+}
+
+bootJar {
+    enabled = true
+}
+
+jar{
+    enabled = false
 }
