jwt 토큰 설정 및 토큰 에러 코드 작성

--- a/api/src/main/resources/application.yaml
+++ b/api/src/main/resources/application.yaml
@@ -14,3 +14,11 @@ spring:
 
 server:
   port: 8081
+
+token:
+  secret:
+    key: SpringBootJWTHelperTokenSecretKeyValue123!@#
+  access-token:
+    plus-hour: 1
+  refresh-token:
+    plus-hour: 12
